--- a/themes/academydeliver/scss/template/_header.scss
+++ b/themes/academydeliver/scss/template/_header.scss
@@ -244,6 +244,7 @@
         }
 
         .search-box {
+            @extend %vertical-align;
             @include breakpoint(no-mobile) {
                display: none;
             }
